# PocketVoice

./: .gitignore  README.md  THIRD_PARTY_NOTICES.txt
.github/workflows/: ci.yml  release.yml
docs/architecture/: QWEN3_QNN_DECODER_EXPERIMENT_LOG.md  QWEN3_QNN_NEXT_TASKS_FOR_AI.md
docs/superpowers/plans/: 2026-06-15-gate-b-float32-kv-cache.md  2026-06-15-gate-b3-tiny-custom-io-probe.md  2026-06-15-gate-b4-bridge-probe.md  2026-06-15-gate-d1-cpu-decoder-fallback-probe.md
docs/superpowers/specs/: 2026-06-15-gate-b3-tiny-custom-io-probe-design.md  2026-06-15-gate-b4-bridge-probe-design.md  2026-06-15-gate-d1-cpu-decoder-fallback-probe-design.md  2026-06-15-htp-kv-encoding-audit-design.md  2026-06-15-htp-kv-encoding-gate-b-design.md
licenses/: FIREREDASR2S_LICENSE.txt  ONNXRUNTIME_LICENSE.txt  QUALCOMM_QAIRT_LICENSE.txt  QUALCOMM_QNN_NOTICE.txt  SENSEVOICE_MODEL_LICENSE.txt  SHERPA_ONNX_LICENSE.txt
models/: chat_filter_words.txt
scripts/: adb_forward.bat  android_pressure_suite.js  android_pressure_suite.test.js  app_icon.test.js  build_mobile_apk.bat  build_pc.bat  build_qnn_android.bat  build_qnn_model_lib_android.ps1  build_qnn_model_lib_android.test.js  build_tiny_custom_io_probe.py  check_qnn_prereqs.bat  check_qnn_prereqs.js  check_qnn_prereqs.test.js  convert_qwen3_decoder_single_model_kv_override.py  convert_sensevoice_qnn_variant.bat  convert_sensevoice_qnn_variant.test.js  convert_tiny_custom_io_probe.py  download_sensevoice_qnn_libmodel.bat  env.bat  fireredasr2_aed_eval.bat  fireredasr2_aed_eval.py  generate_hotword_tts.ps1  make_sensevoice_fixed_prompt_onnx.py  mobile_android_stress_test.js  mobile_qnn_integration.test.js  package_model_packs.ps1  package_preview.bat  package_preview.test.js  paraformer_contextual_eval.bat  paraformer_contextual_eval.py  pc_accuracy_report.test.js  pc_logger.test.js  pc_wav_suite.js  pc_wav_suite.test.js  pc_wav_suite_startup.test.js  pc_webview_shell.test.js  push_paraformer_model.bat  push_qwen3_asr_model.bat  push_sensevoice_qnn_model.bat  push_zipformer_ctc_model.bat  (+45 more)
src/common/: config.h  protocol.h
src/mobile/: build.gradle.kts  settings.gradle  settings.gradle.kts
src/mobile/app/: build.gradle
src/mobile/app/src/main/: AndroidManifest.xml
src/mobile/app/src/main/assets/ui/: app.js  index.html  styles.css
src/mobile/app/src/main/cpp/: CMakeLists.txt  audio_job_queue.cpp  audio_job_queue.h  fbank.h  jni_bridge.cpp  network.cpp  network.h  qwen3_qnn_backend.cpp  qwen3_qnn_backend.h  qwen3_tokenizer.cpp  qwen3_tokenizer.h  runtime_state.cpp  runtime_state.h  stt_engine.cpp  stt_engine.h  text_postprocess.cpp  text_postprocess.h
src/mobile/app/src/main/java/com/stt/mobile/: MainActivity.java  SttForegroundService.java
src/mobile/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
src/mobile/app/src/main/res/values/: strings.xml  styles.xml
src/pc/: CMakeLists.txt  adb_bridge.cpp  adb_bridge.h  chatbox_formatter.cpp  chatbox_formatter.h  chatbox_queue.cpp  chatbox_queue.h  embedded_vad_model.cpp  embedded_vad_model.h  main.cpp  pc_app_controller.cpp  pc_app_controller.h  pc_logger.cpp  pc_logger.h  pc_resources.rc  pc_runtime.cpp  pc_runtime.h  pc_status_json.cpp  pc_status_json.h  pc_status_page.cpp  pc_status_page.h  pc_webview_window.cpp  pc_webview_window.h  resource.h  status_http_server.cpp  status_http_server.h
src/pc/audio/: buffer.cpp  buffer.h  firered_vad_ort.cpp  firered_vad_ort.h  pre_roll_buffer.cpp  pre_roll_buffer.h  sample_converter.cpp  sample_converter.h  vad.cpp  vad.h  wasapi_capture.cpp  wasapi_capture.h
src/pc/audio/firered_frontend/: fft.cpp
src/pc/audio/firered_frontend/frontend/: fbank.h  fft.h
src/pc/network/: client.cpp  client.h
src/pc/osc/: sender.cpp  sender.h
test_audio/: expected.tsv  hotwords.tsv
tests/: qnn_device_create_smoke.cpp
tests/mobile/: audio_job_queue_test.cpp  runtime_state_test.cpp  sensevoice_metadata_test.cpp  text_postprocess_test.cpp
tests/pc/: audio_buffer_test.cpp  audio_sample_converter_test.cpp  chatbox_formatter_test.cpp  chatbox_queue_test.cpp  embedded_vad_model_test.cpp  pc_app_controller_test.cpp  pc_runtime_test.cpp  pc_status_json_test.cpp  pc_status_page_test.cpp  pre_roll_buffer_test.cpp
